<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileSettingsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:onClick="pickImage"
            android:src="@drawable/ic_blank_profile"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="120dp"
            android:layout_height="120dp" />

        <EditText
            android:id="@+id/name"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edittext_background_change_while_typing"
            android:fontFamily="@font/nunito"
            android:hint="@string/your_name"
            android:includeFontPadding="false" />
        <EditText
            android:id="@+id/inst"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:fontFamily="@font/nunito"
            android:hint="@string/your_institution"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_background_change_while_typing"
            android:layout_width="match_parent"
            android:layout_height="60dp" />


        <LinearLayout
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:text="@string/you_are_a"
                android:layout_marginTop="9dp"
                android:drawablePadding="5dp"
                android:layout_gravity="center"
                android:fontFamily="@font/nunito"
                android:layout_width="match_parent"
                android:layout_height="30dp" />


            <RadioGroup
                android:weightSum="3"
                android:id="@+id/radio_group"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">


                <RadioButton
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:onClick="radioCLick"
                    android:id="@+id/radio_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Teacher"
                    />

                <RadioButton
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:onClick="radioCLick"
                    android:id="@+id/radio_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student"
                    />

                <RadioButton
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:onClick="radioCLick"
                    android:id="@+id/radio_both"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Both"
                    />
            </RadioGroup>

        </LinearLayout>


    </LinearLayout>



    <Button
        android:fontFamily="@font/nunito"
        android:onClick="upload"
        android:text="@string/save"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryy"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="60dp" />



</LinearLayout>