<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".AddExamActivity">


    <EditText
        android:padding="10dp"
        android:id="@+id/name"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito"
        android:hint="@string/name"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edittext_background_change_while_typing"/>

    <EditText
        android:padding="10dp"
        android:id="@+id/number_of_questions"
        android:inputType="number"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito"
        android:hint="@string/number_of_question"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edittext_background_change_while_typing"/>


    <LinearLayout
        android:background="@drawable/edittext_background_change_while_typing"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Spinner
            android:layout_weight="1"
            android:id="@+id/correct_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:entries="@array/correct_score_arrays"
            android:padding="5dp" />

        <Spinner
            android:layout_weight="1"
            android:id="@+id/incorrect_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:entries="@array/incorrect_score_arrays"
            android:padding="5dp" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:fontFamily="@font/nunito"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimaryy"
        android:onClick="upload"
        android:text="@string/save"
        android:textColor="@color/white" />


</LinearLayout>